:factory: $ make generate
