# app/media_types.go
@@ -35,6 +35,23 @@ func (mt *Book) Validate() (err error) {
 	return
 }
 
+// BookCollection is the media type for an array of Book (default view)
+//
+// Identifier: application/vnd.book+json; type=collection; view=default
+type BookCollection []*Book
+
+// Validate validates the BookCollection media type instance.
+func (mt BookCollection) Validate() (err error) {
+	for _, e := range mt {
+		if e != nil {
+			if err2 := e.Validate(); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
+	return
+}
+
 // User (default view)
 //
 // Identifier: application/vnd.user+json; view=default
