# swagger/swagger.yaml
@@ -5,25 +5,86 @@ consumes:
 - application/gob
 - application/x-gob
 definitions:
+  Book:
+    description: Book (default view)
+    example:
+      author: Hic tenetur ut.
+      name: Harum ratione.
+      userId: 1.3157771646406797e+18
+    properties:
+      author:
+        example: Hic tenetur ut.
+        type: string
+      name:
+        example: Harum ratione.
+        type: string
+      userId:
+        example: 1.3157771646406797e+18
+        format: int64
+        type: integer
+    required:
+    - userId
+    - name
+    - author
+    title: 'Mediatype identifier: application/vnd.book+json; view=default'
+    type: object
+  BookCollection:
+    description: BookCollection is the media type for an array of Book (default view)
+    example:
+    - author: Hic tenetur ut.
+      name: Harum ratione.
+      userId: 1.3157771646406797e+18
+    - author: Hic tenetur ut.
+      name: Harum ratione.
+      userId: 1.3157771646406797e+18
+    - author: Hic tenetur ut.
+      name: Harum ratione.
+      userId: 1.3157771646406797e+18
+    items:
+      $ref: '#/definitions/Book'
+    title: 'Mediatype identifier: application/vnd.book+json; type=collection; view=default'
+    type: array
+  BookPayload:
+    example:
+      author: Cum amet sed.
+      name: Impedit facilis suscipit amet cum numquam.
+      userId: 1.4134025174114424e+18
+    properties:
+      author:
+        example: Cum amet sed.
+        type: string
+      name:
+        example: Impedit facilis suscipit amet cum numquam.
+        type: string
+      userId:
+        example: 1.4134025174114424e+18
+        format: int64
+        type: integer
+    required:
+    - userId
+    - name
+    - author
+    title: BookPayload
+    type: object
   User:
     description: User (default view)
     example:
-      city: Blanditiis numquam consequatur.
-      email: Iure non culpa sed officia.
-      name: Saepe et quia.
-      userId: 3.2907803431339505e+18
+      city: Numquam consequatur aliquam iure non culpa sed.
+      email: Nihil saepe et quia.
+      name: Est quas repudiandae.
+      userId: 8.759870265339155e+18
     properties:
       city:
-        example: Blanditiis numquam consequatur.
+        example: Numquam consequatur aliquam iure non culpa sed.
         type: string
       email:
-        example: Iure non culpa sed officia.
+        example: Nihil saepe et quia.
         type: string
       name:
-        example: Saepe et quia.
+        example: Est quas repudiandae.
         type: string
       userId:
-        example: 3.2907803431339505e+18
+        example: 8.759870265339155e+18
         format: int64
         type: integer
     required:
@@ -35,40 +96,36 @@ definitions:
   UserCollection:
     description: UserCollection is the media type for an array of User (default view)
     example:
-    - city: Blanditiis numquam consequatur.
-      email: Iure non culpa sed officia.
-      name: Saepe et quia.
-      userId: 3.2907803431339505e+18
-    - city: Blanditiis numquam consequatur.
-      email: Iure non culpa sed officia.
-      name: Saepe et quia.
-      userId: 3.2907803431339505e+18
-    - city: Blanditiis numquam consequatur.
-      email: Iure non culpa sed officia.
-      name: Saepe et quia.
-      userId: 3.2907803431339505e+18
+    - city: Numquam consequatur aliquam iure non culpa sed.
+      email: Nihil saepe et quia.
+      name: Est quas repudiandae.
+      userId: 8.759870265339155e+18
+    - city: Numquam consequatur aliquam iure non culpa sed.
+      email: Nihil saepe et quia.
+      name: Est quas repudiandae.
+      userId: 8.759870265339155e+18
     items:
       $ref: '#/definitions/User'
     title: 'Mediatype identifier: application/vnd.user+json; type=collection; view=default'
     type: array
   UserPayload:
     example:
-      city: Repudiandae quae distinctio quaerat.
-      email: Amet sed.
-      name: Impedit facilis suscipit amet cum numquam.
-      userId: 1.4134025174114424e+18
+      city: Aspernatur et numquam aut et similique consectetur.
+      email: Aut ratione praesentium asperiores dolor.
+      name: Iusto pariatur sequi adipisci eius temporibus.
+      userId: 1.6316531384055823e+18
     properties:
       city:
-        example: Repudiandae quae distinctio quaerat.
+        example: Aspernatur et numquam aut et similique consectetur.
         type: string
       email:
-        example: Amet sed.
+        example: Aut ratione praesentium asperiores dolor.
         type: string
       name:
-        example: Impedit facilis suscipit amet cum numquam.
+        example: Iusto pariatur sequi adipisci eius temporibus.
         type: string
       userId:
-        example: 1.4134025174114424e+18
+        example: 1.6316531384055823e+18
         format: int64
         type: integer
     required:
@@ -121,6 +178,213 @@ info:
   title: The appengine example
   version: ""
 paths:
+  /books:
+    get:
+      description: list
+      operationId: Book#list
+      produces:
+      - application/vnd.book+json; type=collection
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/BookCollection'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: list Book
+      tags:
+      - Book
+    post:
+      description: create
+      operationId: Book#create
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/BookPayload'
+      produces:
+      - application/vnd.book+json
+      - application/vnd.goa.error
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: create Book
+      tags:
+      - Book
+  /books/{name}:
+    delete:
+      description: delete
+      operationId: Book#delete
+      parameters:
+      - in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/vnd.book+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: delete Book
+      tags:
+      - Book
+    get:
+      description: show
+      operationId: Book#show
+      parameters:
+      - in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/vnd.book+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: show Book
+      tags:
+      - Book
+    put:
+      operationId: Book#update
+      parameters:
+      - in: path
+        name: name
+        required: true
+        type: string
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/BookPayload'
+      produces:
+      - application/vnd.book+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: update Book
+      tags:
+      - Book
   /users:
     get:
       description: list
